--- a/apps/messenger/env/local.env
+++ b/apps/messenger/env/local.env
@@ -1,6 +1,6 @@
 NODE_ENV=local
 PORT=4000
-MONGO_URI=mongodb://mongo:27017/user-management
+MONGO_URI=mongodb://mongo:27017/messenger
 JWT_SECRET=74YLbq4%c!wU
 JWT_EXPIRATION_TIME=1800
 JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
