ADD kafka and grpc configs still unabel to pull docker image

--- a/apps/messenger/env/local.env
+++ b/apps/messenger/env/local.env
@@ -1,9 +1,5 @@
 NODE_ENV=local
-PORT=4000
+HTTP_PORT=4000
 MONGO_URI=mongodb://mongo:27017/messenger
-JWT_SECRET=74YLbq4%c!wU
-JWT_EXPIRATION_TIME=1800
-JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
-JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 REDIS_HOST=redis
 REDISE_PORT=6379
