--- a/apps/user-management/env/local.env
+++ b/apps/user-management/env/local.env
@@ -1,5 +1,5 @@
 NODE_ENV=local
-PORT=3000
+HTTP_PORT=3000
 MONGO_URI=mongodb://mongo:27017/user-management
 JWT_SECRET=74YLbq4%c!wU
 JWT_EXPIRATION_TIME=1800
