--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  gateway:
+    build:
+      context: .
+      dockerfile: ./apps/gateway/Dockerfile
+    container_name: gateway
+    restart: always
+    ports:
+      - '2000:2000'
+    command: npm run start:dev gateway
+    depends_on:
+      - redis
+    networks:
+      - app-net
+    volumes:
+      - .:/app
+      - ./proto/:/app/dist/proto
+      - /app/node_modules
   user-management:
     build:
       context: .
@@ -9,6 +26,7 @@ services:
     restart: always
     ports:
       - '3000:3000'
+      - '50051:50051'
     command: npm run start:dev user-management
     depends_on:
       - mongo
@@ -16,6 +34,7 @@ services:
       - app-net
     volumes:
       - .:/app
+      - ./proto/:/app/dist/proto
       - /app/node_modules
   messenger:
     build:
@@ -25,6 +44,7 @@ services:
     restart: always
     ports:
       - '4000:4000'
+      - '50052:50051'
     command: npm run start:dev messenger
     depends_on:
       - mongo
@@ -32,6 +52,7 @@ services:
       - app-net
     volumes:
       - .:/app
+      - ./proto/:/app/dist/proto
       - /app/node_modules
   mongo:
     image: mongo:5.0
@@ -53,8 +74,24 @@ services:
       - app-net
     volumes:
       - redis-data:/data
+  kafka:
+    image: wurstmeister/kafka:2.13-2.7.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - app-net
 volumes:
   mongo-data:
   redis-data:
 networks:
   app-net:
+
+
+
+
+# protoc generation command
+# protoc --plugin=protoc-gen-ts_proto="$(npm root)\.bin\protoc-gen-ts_proto.cmd" --ts_proto_out=./libs\shared\src --ts_proto_opt=nestJs=true ./proto/*.proto
