CHANGE seprating services and add authentication on gateay

--- a/apps/user-management/Dockerfile
+++ b/apps/user-management/Dockerfile
@@ -13,7 +13,10 @@ FROM node:18-alpine
 WORKDIR /app
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
-COPY src/i18n /app/dist/i18n
+COPY apps/user-management/src/i18n /app/dist/user-management/i18n
+COPY /proto /app/dist/proto
 
+
+RUN npm install -g @nestjs/cli
 RUN npm install --only=production
 CMD [ "node", "dist/apps/user-management/main" ]
