--- a/apps/messenger/Dockerfile
+++ b/apps/messenger/Dockerfile
@@ -13,7 +13,9 @@ FROM node:18-alpine
 WORKDIR /app
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
-COPY src/i18n /app/dist/i18n
+COPY apps/messenger/src/i18n /app/dist/messenger/i18n
+COPY /proto /app/dist/proto
 
+RUN npm install -g @nestjs/cli
 RUN npm install --only=production
 CMD [ "node", "dist/apps/messenger/main" ]
