--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,14 @@ services:
     restart: always
     ports:
       - '2000:2000'
-    command: npm run start:dev gateway
     depends_on:
       - redis
+      - kafka
+      - user-management
+      - messenger
     networks:
       - app-net
-    volumes:
-      - .:/app
-      - ./proto/:/app/dist/proto
-      - /app/node_modules
+
   user-management:
     build:
       context: .
@@ -26,15 +25,11 @@ services:
     restart: always
     ports:
       - '50051:50051'
-    command: npm run start:dev user-management
     depends_on:
       - mongo
     networks:
       - app-net
-    volumes:
-      - .:/app
-      - ./proto/:/app/dist/proto
-      - /app/node_modules
+
   messenger:
     build:
       context: .
@@ -43,15 +38,11 @@ services:
     restart: always
     ports:
       - '50052:50051'
-    command: npm run start:dev messenger
     depends_on:
       - mongo
     networks:
       - app-net
-    volumes:
-      - .:/app
-      - ./proto/:/app/dist/proto
-      - /app/node_modules
+
   mongo:
     image: mongo:5.0
     container_name: mongodb
@@ -62,6 +53,7 @@ services:
       - mongo-data:/data/db
     networks:
       - app-net
+
   redis:
     container_name: redis
     image: redis
@@ -72,21 +64,37 @@ services:
       - app-net
     volumes:
       - redis-data:/data
+
+  zookeeper:
+    image: wurstmeister/zookeeper:3.4.6
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    networks:
+      - app-net
+
   kafka:
     image: wurstmeister/kafka:2.13-2.7.0
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
     networks:
       - app-net
+
 volumes:
   mongo-data:
   redis-data:
+
 networks:
   app-net:
+
 
 
 
