FIX all the bugs after docker build succeeded

--- a/apps/messenger/Dockerfile
+++ b/apps/messenger/Dockerfile
@@ -1,26 +1,29 @@
 # Stage 1: Build
 FROM node:18 AS builder
-ARG NODE_ENV=local
-ENV NODE_ENV=${NODE_ENV}
 WORKDIR /app
 
 # Install dependencies
-COPY package*.json ./
+COPY package*.json ./ 
 RUN npm ci
 
-# Copy source code and build
+# Copy all apps and build the entire project, including all services
 COPY . .
-RUN npm run build
+
+# Build the project for production (this will create the dist/ folder)
+RUN npm run build messenger
 
 # Stage 2: Production
 FROM node:18-alpine
 WORKDIR /app
 
-# Copy built application and install production dependencies
-COPY --from=builder /app/dist ./dist
+# Copy only the built application and the proto files
 COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/proto ./dist/proto
 RUN npm ci --only=production
 
+# Expose the port for the service
+EXPOSE 2000
 
+# Start the service (in this case, the gateway service)
 CMD [ "node", "dist/apps/messenger/main" ]
