--- a/apps/user-management/Dockerfile
+++ b/apps/user-management/Dockerfile
@@ -1,7 +1,5 @@
 # Stage 1: Build
 FROM node:18 AS builder
-ARG NODE_ENV=local
-ENV NODE_ENV=${NODE_ENV}
 WORKDIR /app
 
 # Install dependencies
@@ -10,17 +8,17 @@ RUN npm ci
 
 # Copy source code and build
 COPY . .
-RUN npm run build
+RUN npm run build user-management
 
 # Stage 2: Production
 FROM node:18-alpine
 WORKDIR /app
 
 # Copy built application and install production dependencies
-COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/proto ./dist/proto
-RUN npm ci --only=production
 
+RUN npm ci --only=production
 
 CMD [ "node", "dist/apps/user-management/main" ]
