--- a/local.yml
+++ b/local.yml
@@ -2,17 +2,22 @@ version: '3.8'
 
 services:
   todolist:
-    build: .
+    build:
+      context: .
+      dockerfile: DockerfileLocal
     container_name: todolist
     restart: always
     ports:
       - '3000:3000'
+    command: npm run start:dev
     environment:
       MONGO_URI: mongodb://mongo:27017/todolist
     depends_on:
       - mongo
     networks:
       - app-net
+    volumes:
+      - .:/app
   mongo:
     image: mongo:5.0
     container_name: mongodb-todolist
